--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
             <h2>Module 15 of the Codecademy Full Stack Engineer Career Path projects</h2>
         </header>
         <main>
-            <section id="module12">
+            <section id="module12" class="moduleSection">
                 <figure>
                     <a href="drilTweets.png"><img alt="random @dril tweets" src="drilTweets.png"></a>
                     <figcaption>random @dril tweets</figcaption>
@@ -23,8 +23,24 @@
                 <section>
                     <p>Randomly generate nonsensical @dril tweets.</p>
                     <p>Uses only JavaScript. Intended to be used with Node.</p>
+                    <p><a href="https://github.com/stevenmalley/messageGenerator">See it on Github.</a></p>
                 </section>
             </section><!-- end module12 -->
+            <section id="module15" class="moduleSection">
+                <figure>
+                    <a href="portfolio.png"><img alt="this page" src="portfolio.png"></a>
+                    <figcaption>this page!</figcaption>
+                </figure>
+                <header>
+                    <h3>Project Portfolio</h3>
+                    <h4>Module 15 project</h4>
+                </header>
+                <section>
+                    <p>This page is the Module 15 project.</p>
+                    <p>The page was created with HTML, CSS and Javascript. CSS Grid was used for layout.</p>
+                    <p><a href="https://github.com/stevenmalley/portfolio">Git and Github were used for version control.</a></p>
+                </section>
+            </section><!-- end module15 -->
         </main>
     </body>
 </html>
