--- a/index.htm
+++ b/index.htm
@@ -41,6 +41,21 @@
                     <p><a href="https://github.com/stevenmalley/portfolio">Git and Github were used for version control.</a></p>
                 </section>
             </section><!-- end module15 -->
+            <section id="module22-1" class="moduleSection">
+                <figure>
+                    <a href="react-router.png"><img alt="react router project" src="react-router.png"></a>
+                    <figcaption>React Router project</figcaption>
+                </figure>
+                <header>
+                    <h3>React Router project 1</h3>
+                    <h4>Module 22 project</h4>
+                </header>
+                <section>
+                    <p>A website made with React Router containing various articles, login and search functionality, all without reloading the page.</p>
+                    <p>The application was created with React and the React Router module.</p>
+                    <p><a href="https://github.com/stevenmalley/reactrouter1">Git and Github were used for version control.</a></p>
+                </section>
+            </section><!-- end module22-1 -->
         </main>
     </body>
 </html>
