--- a/index.htm
+++ b/index.htm
@@ -56,6 +56,21 @@
                     <p><a href="https://github.com/stevenmalley/reactrouter1">Git and Github were used for version control.</a></p>
                 </section>
             </section><!-- end module22-1 -->
+            <section id="module22-2" class="moduleSection">
+                <figure>
+                    <a href="adopt-a-pet.png"><img alt="adopt a pet project" src="adopt-a-pet.png"></a>
+                    <figcaption>Adopt A Pet project</figcaption>
+                </figure>
+                <header>
+                    <h3>Adopt A Pet</h3>
+                    <h4>Module 22 project</h4>
+                </header>
+                <section>
+                    <p>A website made with React Router containing pet profiles and search functionality, all without reloading the page.</p>
+                    <p>The application was created with React and the React Router module.</p>
+                    <p><a href="https://github.com/stevenmalley/adopt-a-pet">Git and Github were used for version control.</a></p>
+                </section>
+            </section><!-- end module22-2 -->
         </main>
     </body>
 </html>
