online shop fullstack app added

--- a/index.htm
+++ b/index.htm
@@ -71,6 +71,22 @@
                     <p><a href="https://github.com/stevenmalley/adopt-a-pet">Git and Github were used for version control.</a></p>
                 </section>
             </section><!-- end module22-2 -->
+            <section id="shoppe" class="moduleSection">
+                <figure>
+                    <a href="shoppe.png"><img alt="ye olde online shoppe" src="shoppe.png"></a>
+                    <figcaption>Fullstack Web App: online shop</figcaption>
+                </figure>
+                <header>
+                    <h3>Shoppe</h3>
+                    <h4>ye olde online shoppe</h4>
+                </header>
+                <section>
+                    <p>Backend featuring Node, Express, PostgreSQL.</p>
+                    <p>Frontend using React, Redux, React Router.</p>
+                    <p><a href="https://ye-shoppe.herokuapp.com/">All hosted on Heroku.</a></p>
+                    <p><a href="https://github.com/stevenmalley/shoppe">Git and Github were used for version control.</a></p>
+                </section>
+            </section><!-- end shoppe -->
         </main>
     </body>
 </html>
