ye-shoppe link attached to image

--- a/index.htm
+++ b/index.htm
@@ -73,7 +73,7 @@
             </section><!-- end module22-2 -->
             <section id="shoppe" class="moduleSection">
                 <figure>
-                    <a href="shoppe.png"><img alt="ye olde online shoppe" src="shoppe.png"></a>
+                    <a href="https://ye-shoppe.herokuapp.com/"><img alt="ye olde online shoppe" src="shoppe.png"></a>
                     <figcaption>Fullstack Web App: online shop</figcaption>
                 </figure>
                 <header>
