project description: stripe and google oauth added

--- a/index.htm
+++ b/index.htm
@@ -83,6 +83,7 @@
                 <section>
                     <p>Backend featuring Node, Express, PostgreSQL.</p>
                     <p>Frontend using React, Redux, React Router.</p>
+                    <p>Integrates Stripe for payments and Sign In With Google.</p>
                     <p><a href="https://ye-shoppe.herokuapp.com/">All hosted on Heroku.</a></p>
                     <p><a href="https://github.com/stevenmalley/shoppe">Git and Github were used for version control.</a></p>
                 </section>
