contact page and reddit-prawn project added

--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,14 @@
             <h1>Project Portfolio</h1>
             <h2>Module 15 of the Codecademy Full Stack Engineer Career Path projects</h2>
         </header>
+        <nav>
+          <ul>
+            <li>
+              <a href="#" class="current">portfolio</a>
+              <a href="./contact.htm">contact</a>
+            </li>
+          </ul>
+        </nav>
         <main>
             <section id="remembo" class="moduleSection">
                 <figure>
@@ -45,6 +53,22 @@
                     <p><a href="https://github.com/stevenmalley/shoppe">Git and Github were used for version control.</a></p>
                 </section>
             </section><!-- end shoppe -->
+            <section id="reddit-prawn" class="moduleSection">
+                <figure>
+                    <img alt="Reddit Client" src="reddit-prawn.png" onclick="setGallery(this,'https://reddit-prawn.netlify.app/')">
+                    <figcaption>Reddit Client App: Reddit-Prawn</figcaption>
+                </figure>
+                <header>
+                    <h3>Reddit-Prawn</h3>
+                    <h4>Reddit Client App</h4>
+                </header>
+                <section>
+                    <p>React app using React Router v6 and Redux.</p>
+                    <p>Fetches Reddit API data and displays it via React components.</p>
+                    <p><a href="https://reddit-prawn.netlify.app/">Hosted on Netlify.</a></p>
+                    <p><a href="https://github.com/stevenmalley/reddit-prawn">See it on Github.</a></p>
+                </section>
+            </section><!-- end reddit-prawn -->
             <section id="module12" class="moduleSection">
                 <figure>
                     <img alt="random @dril tweets" src="drilTweets.png" onclick="setGallery(this)">
