colours changed, images moved to images directory

--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
         <main>
             <section id="remembo" class="moduleSection">
                 <figure>
-                    <img alt="remembo" src="remembo.png" onclick="setGallery(this,'https://remembo.herokuapp.com/')">
+                    <img alt="remembo" src="images/remembo.png" onclick="setGallery(this,'https://remembo.herokuapp.com/')">
                     <figcaption>Fullstack PERN Web App: memorisation tool</figcaption>
                 </figure>
                 <header>
@@ -38,7 +38,7 @@
             </section><!-- end remembo -->
             <section id="shoppe" class="moduleSection">
                 <figure>
-                    <img alt="ye olde online shoppe" src="shoppe.png" onclick="setGallery(this,'https://ye-shoppe.herokuapp.com/')">
+                    <img alt="ye olde online shoppe" src="images/shoppe.png" onclick="setGallery(this,'https://ye-shoppe.herokuapp.com/')">
                     <figcaption>Fullstack Web App: online shop</figcaption>
                 </figure>
                 <header>
@@ -55,7 +55,7 @@
             </section><!-- end shoppe -->
             <section id="reddit-prawn" class="moduleSection">
                 <figure>
-                    <img alt="Reddit Client" src="reddit-prawn.png" onclick="setGallery(this,'https://reddit-prawn.netlify.app/')">
+                    <img alt="Reddit Client" src="images/reddit-prawn.png" onclick="setGallery(this,'https://reddit-prawn.netlify.app/')">
                     <figcaption>Reddit Client App: Reddit-Prawn</figcaption>
                 </figure>
                 <header>
@@ -71,7 +71,7 @@
             </section><!-- end reddit-prawn -->
             <section id="module12" class="moduleSection">
                 <figure>
-                    <img alt="random @dril tweets" src="drilTweets.png" onclick="setGallery(this)">
+                    <img alt="random @dril tweets" src="images/drilTweets.png" onclick="setGallery(this)">
                     <figcaption>random @dril tweets</figcaption>
                 </figure>
                 <header>
@@ -86,7 +86,7 @@
             </section><!-- end module12 -->
             <section id="module15" class="moduleSection">
                 <figure>
-                    <img alt="this page" src="portfolio.png" onclick="setGallery(this)">
+                    <img alt="this page" src="images/portfolio.png" onclick="setGallery(this)">
                     <figcaption>this page!</figcaption>
                 </figure>
                 <header>
@@ -101,7 +101,7 @@
             </section><!-- end module15 -->
             <section id="module22-1" class="moduleSection">
                 <figure>
-                    <img alt="react router project" src="react-router.png" onclick="setGallery(this)">
+                    <img alt="react router project" src="images/react-router.png" onclick="setGallery(this)">
                     <figcaption>React Router project</figcaption>
                 </figure>
                 <header>
@@ -116,7 +116,7 @@
             </section><!-- end module22-1 -->
             <section id="module22-2" class="moduleSection">
                 <figure>
-                    <img alt="adopt a pet project" src="adopt-a-pet.png" onclick="setGallery(this)">
+                    <img alt="adopt a pet project" src="images/adopt-a-pet.png" onclick="setGallery(this)">
                     <figcaption>Adopt A Pet project</figcaption>
                 </figure>
                 <header>
